--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
 
         <!--Navigation to other pages of web-site-->
-        <div class="header-menu-container is-hidden" data-menu>
+        <div class="header-menu-container" data-menu>
           <nav>
             <ul class="main-navigation">
               <li class="item">
