scope-of-business commit

--- a/index.html
+++ b/index.html
@@ -156,28 +156,40 @@
       <!--Scope of business section-->
       <section class="scope-of-business">
         <div class="container">
-          <h2 class="hidden">Чем мы занимаемся</h2>
+          <h2>Чем мы занимаемся</h2>
           <ul class="activities">
             <li class="item">
               <img
                 width="370"
-                src="./images/body/pictures/desctop.jpg"
+                srcset="
+                  ./images/body/pictures/desctop-370.jpg 1x,
+                  ./images/body/pictures/desctop-740.jpg 2x
+                "
+                src="./images/body/pictures/desctop-370.jpg"
                 alt="Персональный компьютер"
               />
               <h3 class="title-white">Десктопные приложения</h3>
             </li>
             <li class="item">
               <img
+                srcset="
+                  ./images/body/pictures/mobile-370.jpg 1x,
+                  ./images/body/pictures/mobile-740.jpg 2x
+                "
                 width="370"
-                src="./images/body/pictures/mobile.jpg"
+                src="./images/body/pictures/mobile-370.jpg"
                 alt="Мобильный телефон"
               />
               <h3 class="title-white">Мобильные приложения</h3>
             </li>
             <li class="item">
               <img
+                srcset="
+                  ./images/body/pictures/design-370.jpg 1x,
+                  ./images/body/pictures/design-740.jpg 2x
+                "
                 width="370"
-                src="./images/body/pictures/design.jpg"
+                src="./images/body/pictures/design-370.jpg"
                 alt="Монитор"
               />
               <h3 class="title-white">Дизайнерские решения</h3>
