--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <!--Our advantages section-->
       <section class="advantages">
-        <div class="container">
+        <div>
           <h2 class="hidden">Наши преимущества</h2>
           <ul class="advantages-list">
             <li class="item">
@@ -200,15 +200,55 @@
 
       <!--Our team section-->
       <section class="our-team">
-        <div class="container">
+        <div class="team-container">
           <h2>Наша команда</h2>
           <ul class="our-team-list">
             <li class="team-member">
-              <img
-                width="270"
-                src="./images/body/pictures/kucherenko.jpg"
-                alt="Фотография Николая Кучеренко"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/kucherenko-270.webp 270w,
+                    ./images/body/pictures/kucherenko-540.webp 540w
+                  "
+                  sizes="25vw"
+                  type="image/webp"
+                />
+
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/kucherenko-450.webp 450w,
+                    ./images/body/pictures/kucherenko-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/kucherenko-354.webp 354w,
+                    ./images/body/pictures/kucherenko-708.webp 708w
+                  "
+                  sizes="50vw"
+                  type="image/webp"
+                />
+
+                <img
+                  srcset="
+                    ./images/body/pictures/kucherenko-354.jpg 354w,
+                    ./images/body/pictures/kucherenko-708.jpg 708w,
+                    ./images/body/pictures/kucherenko-450.jpg 450w,
+                    ./images/body/pictures/kucherenko-900.jpg 900w,
+                    ./images/body/pictures/kucherenko-270.jpg 270w,
+                    ./images/body/pictures/kucherenko-540.jpg 540w
+                  "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
+                  src="./images/body/pictures/kucherenko-354.jpg"
+                  alt="Фотография Николая Кучеренко"
+                />
+              </picture>
+
               <h3>Николай Кучеренко</h3>
               <p lang="en">Product Designer</p>
               <ul class="social-links">
@@ -260,11 +300,67 @@
             </li>
 
             <li class="team-member">
-              <img
-                width="270"
-                src="./images/body/pictures/ivanova.jpg"
-                alt="Фотография Ольги Ивановой"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-270.webp 270w,
+                    ./images/body/pictures/ivanova-540.webp 540w
+                  "
+                  sizes="25vw"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-270.jpg 270w,
+                    ./images/body/pictures/ivanova-540.jpg 540w
+                  "
+                  sizes="25vw"
+                />
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-450.webp 450w,
+                    ./images/body/pictures/ivanova-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-450.jpg 450w,
+                    ./images/body/pictures/ivanova-900.jpg 900w
+                  "
+                />
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-354.webp 354w,
+                    ./images/body/pictures/ivanova-708.webp 708w
+                  "
+                  sizes="50vw"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-354.jpg 354w,
+                    ./images/body/pictures/ivanova-708.jpg 708w
+                  "
+                  sizes="50vw"
+                />
+
+                <img
+                  width="354"
+                  srcset="
+                    ./images/body/pictures/ivanova-354.jpg 1x,
+                    ./images/body/pictures/ivanova-708.jpg 2x
+                  "
+                  src="./images/body/pictures/ivanova-354.jpg"
+                  alt="Фотография Ольги Ивановой"
+                />
+              </picture>
               <h3>Ольга Иванова</h3>
               <p lang="en">Frontend Developer</p>
               <ul class="social-links">
@@ -315,11 +411,67 @@
               </ul>
             </li>
             <li class="team-member">
-              <img
-                width="270"
-                src="./images/body/pictures/shevchenko.jpg"
-                alt="Фотография Андрея Шевченко"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-270.webp 270w,
+                    ./images/body/pictures/shevchenko-540.webp 540w
+                  "
+                  sizes="25vw"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-270.jpg 270w,
+                    ./images/body/pictures/shevchenko-540.jpg 540w
+                  "
+                  sizes="25vw"
+                />
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-450.webp 450w,
+                    ./images/body/pictures/shevchenko-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-450.jpg 450w,
+                    ./images/body/pictures/shevchenko-900.jpg 900w
+                  "
+                />
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-354.webp 354w,
+                    ./images/body/pictures/shevchenko-708.webp 708w
+                  "
+                  sizes="50vw"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-354.jpg 354w,
+                    ./images/body/pictures/shevchenko-708.jpg 708w
+                  "
+                  sizes="50vw"
+                />
+
+                <img
+                  width="354"
+                  srcset="
+                    ./images/body/pictures/shevchenko-354.jpg 1x,
+                    ./images/body/pictures/shevchenko-708.jpg 2x
+                  "
+                  src="./images/body/pictures/shevchenko-354.jpg"
+                  alt="Фотография Андрея Шевченко"
+                />
+              </picture>
               <h3>Андрей Шевченко</h3>
               <p lang="en">Marketing</p>
               <ul class="social-links">
@@ -371,11 +523,67 @@
             </li>
 
             <li class="team-member">
-              <img
-                width="270"
-                src="./images/body/pictures/nikilaev.jpg"
-                alt="Фотография Ивана Николаева"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-270.webp 270w,
+                    ./images/body/pictures/nikolaev-540.webp 540w
+                  "
+                  sizes="25vw"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1600px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-270.jpg 270w,
+                    ./images/body/pictures/nikolaev-540.jpg 540w
+                  "
+                  sizes="25vw"
+                />
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-450.webp 450w,
+                    ./images/body/pictures/nikolaev-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(max-width: 480px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-450.jpg 450w,
+                    ./images/body/pictures/nikolaev-900.jpg 900w
+                  "
+                />
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-354.webp 354w,
+                    ./images/body/pictures/nikolaev-708.webp 708w
+                  "
+                  sizes="50vw"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 481px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-354.jpg 354w,
+                    ./images/body/pictures/nikolaev-708.jpg 708w
+                  "
+                  sizes="50vw"
+                />
+
+                <img
+                  max-width="354"
+                  srcset="
+                    ./images/body/pictures/nikolaev-354.jpg 1x,
+                    ./images/body/pictures/nikolaev-708.jpg 2x
+                  "
+                  src="./images/body/pictures/nikolaev-354.jpg"
+                  alt="Фотография Ивана Николаева"
+                />
+              </picture>
               <h3>Иван Николаев</h3>
               <p lang="en">UI Designer</p>
               <ul class="social-links">
