our-team completed and clients basics

--- a/index.html
+++ b/index.html
@@ -310,14 +310,7 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-                <source
-                  media="(min-width: 1600px)"
-                  srcset="
-                    ./images/body/pictures/ivanova-270.jpg 270w,
-                    ./images/body/pictures/ivanova-540.jpg 540w
-                  "
-                  sizes="25vw"
-                />
+
                 <source
                   media="(max-width: 480px)"
                   srcset="
@@ -326,13 +319,7 @@
                   "
                   type="image/webp"
                 />
-                <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/ivanova-450.jpg 450w,
-                    ./images/body/pictures/ivanova-900.jpg 900w
-                  "
-                />
+
                 <source
                   media="(min-width: 481px)"
                   srcset="
@@ -342,21 +329,17 @@
                   sizes="50vw"
                   type="image/webp"
                 />
-                <source
-                  media="(min-width: 481px)"
-                  srcset="
-                    ./images/body/pictures/ivanova-354.jpg 354w,
-                    ./images/body/pictures/ivanova-708.jpg 708w
-                  "
-                  sizes="50vw"
-                />
 
                 <img
-                  width="354"
                   srcset="
-                    ./images/body/pictures/ivanova-354.jpg 1x,
-                    ./images/body/pictures/ivanova-708.jpg 2x
+                    ./images/body/pictures/ivanova-354.jpg 354w,
+                    ./images/body/pictures/ivanova-708.jpg 708w,
+                    ./images/body/pictures/ivanova-450.jpg 450w,
+                    ./images/body/pictures/ivanova-900.jpg 900w,
+                    ./images/body/pictures/ivanova-270.jpg 270w,
+                    ./images/body/pictures/ivanova-540.jpg 540w
                   "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
                   src="./images/body/pictures/ivanova-354.jpg"
                   alt="Фотография Ольги Ивановой"
                 />
@@ -421,14 +404,7 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-                <source
-                  media="(min-width: 1600px)"
-                  srcset="
-                    ./images/body/pictures/shevchenko-270.jpg 270w,
-                    ./images/body/pictures/shevchenko-540.jpg 540w
-                  "
-                  sizes="25vw"
-                />
+
                 <source
                   media="(max-width: 480px)"
                   srcset="
@@ -437,13 +413,7 @@
                   "
                   type="image/webp"
                 />
-                <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/shevchenko-450.jpg 450w,
-                    ./images/body/pictures/shevchenko-900.jpg 900w
-                  "
-                />
+
                 <source
                   media="(min-width: 481px)"
                   srcset="
@@ -453,21 +423,18 @@
                   sizes="50vw"
                   type="image/webp"
                 />
-                <source
-                  media="(min-width: 481px)"
-                  srcset="
-                    ./images/body/pictures/shevchenko-354.jpg 354w,
-                    ./images/body/pictures/shevchenko-708.jpg 708w
-                  "
-                  sizes="50vw"
-                />
 
                 <img
                   width="354"
                   srcset="
-                    ./images/body/pictures/shevchenko-354.jpg 1x,
-                    ./images/body/pictures/shevchenko-708.jpg 2x
+                    ./images/body/pictures/shevchenko-354.jpg 354w,
+                    ./images/body/pictures/shevchenko-708.jpg 708w,
+                    ./images/body/pictures/shevchenko-450.jpg 450w,
+                    ./images/body/pictures/shevchenko-900.jpg 900w,
+                    ./images/body/pictures/shevchenko-270.jpg 270w,
+                    ./images/body/pictures/shevchenko-540.jpg 540w
                   "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
                   src="./images/body/pictures/shevchenko-354.jpg"
                   alt="Фотография Андрея Шевченко"
                 />
@@ -533,14 +500,7 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-                <source
-                  media="(min-width: 1600px)"
-                  srcset="
-                    ./images/body/pictures/nikolaev-270.jpg 270w,
-                    ./images/body/pictures/nikolaev-540.jpg 540w
-                  "
-                  sizes="25vw"
-                />
+
                 <source
                   media="(max-width: 480px)"
                   srcset="
@@ -549,13 +509,7 @@
                   "
                   type="image/webp"
                 />
-                <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/nikolaev-450.jpg 450w,
-                    ./images/body/pictures/nikolaev-900.jpg 900w
-                  "
-                />
+
                 <source
                   media="(min-width: 481px)"
                   srcset="
@@ -565,21 +519,18 @@
                   sizes="50vw"
                   type="image/webp"
                 />
-                <source
-                  media="(min-width: 481px)"
-                  srcset="
-                    ./images/body/pictures/nikolaev-354.jpg 354w,
-                    ./images/body/pictures/nikolaev-708.jpg 708w
-                  "
-                  sizes="50vw"
-                />
 
                 <img
                   max-width="354"
                   srcset="
-                    ./images/body/pictures/nikolaev-354.jpg 1x,
-                    ./images/body/pictures/nikolaev-708.jpg 2x
+                    ./images/body/pictures/nikolaev-354.jpg 354w,
+                    ./images/body/pictures/nikolaev-708.jpg 708w,
+                    ./images/body/pictures/nikolaev-450.jpg 450w,
+                    ./images/body/pictures/nikolaev-900.jpg 900w,
+                    ./images/body/pictures/nikolaev-270.jpg 270w,
+                    ./images/body/pictures/nikolaev-540.jpg 540w
                   "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
                   src="./images/body/pictures/nikolaev-354.jpg"
                   alt="Фотография Ивана Николаева"
                 />
@@ -639,7 +590,7 @@
 
       <!--Our-clients-section-->
       <section class="our-clients">
-        <div class="container">
+        <div class="clients-container">
           <h2>Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="item">
