--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
     <!--Footer-->
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer-flex">
+      <div class="footer-flex">
+        <div class="tablet">
           <div class="contacts">
             <a class="logo footer-logo" href="./index.html"
               ><span class="logo-part1">Web</span>Studio</a
@@ -710,24 +710,24 @@
               </li>
             </ul>
           </div>
+        </div>
 
-          <div class="subscribe">
-            <b class="title-white">Подпишитесь на рассылку</b>
-            <form class="subscribe-form">
-              <input
-                class="footer-email"
-                type="email"
-                name="email"
-                placeholder="Email"
-              />
-              <button class="submitt" type="submit">
-                Подписаться
-                <svg class="submitt-icon">
-                  <use href="./images/symbol.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
+        <div class="subscribe">
+          <b class="title-white">Подпишитесь на рассылку</b>
+          <form class="subscribe-form">
+            <input
+              class="footer-email"
+              type="email"
+              name="email"
+              placeholder="Email"
+            />
+            <button class="submitt" type="submit">
+              Подписаться
+              <svg class="submitt-icon">
+                <use href="./images/symbol.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
