--- a/index.html
+++ b/index.html
@@ -214,18 +214,8 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-
                 <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/kucherenko-450.webp 450w,
-                    ./images/body/pictures/kucherenko-900.webp 900w
-                  "
-                  type="image/webp"
-                />
-
-                <source
-                  media="(min-width: 481px)"
+                  media="(min-width: 767px)"
                   srcset="
                     ./images/body/pictures/kucherenko-354.webp 354w,
                     ./images/body/pictures/kucherenko-708.webp 708w
@@ -234,7 +224,17 @@
                   type="image/webp"
                 />
 
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/body/pictures/kucherenko-450.webp 450w,
+                    ./images/body/pictures/kucherenko-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+
                 <img
+                  max-width="100%"
                   srcset="
                     ./images/body/pictures/kucherenko-354.jpg 354w,
                     ./images/body/pictures/kucherenko-708.jpg 708w,
@@ -243,7 +243,7 @@
                     ./images/body/pictures/kucherenko-270.jpg 270w,
                     ./images/body/pictures/kucherenko-540.jpg 540w
                   "
-                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 768px) 50vw, (max-width: 767px) 100vw "
                   src="./images/body/pictures/kucherenko-354.jpg"
                   alt="Фотография Николая Кучеренко"
                 />
@@ -310,18 +310,8 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-
                 <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/ivanova-450.webp 450w,
-                    ./images/body/pictures/ivanova-900.webp 900w
-                  "
-                  type="image/webp"
-                />
-
-                <source
-                  media="(min-width: 481px)"
+                  media="(min-width: 768px)"
                   srcset="
                     ./images/body/pictures/ivanova-354.webp 354w,
                     ./images/body/pictures/ivanova-708.webp 708w
@@ -330,7 +320,17 @@
                   type="image/webp"
                 />
 
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/body/pictures/ivanova-450.webp 450w,
+                    ./images/body/pictures/ivanova-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+
                 <img
+                  max-width="100%"
                   srcset="
                     ./images/body/pictures/ivanova-354.jpg 354w,
                     ./images/body/pictures/ivanova-708.jpg 708w,
@@ -339,7 +339,7 @@
                     ./images/body/pictures/ivanova-270.jpg 270w,
                     ./images/body/pictures/ivanova-540.jpg 540w
                   "
-                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 768px) 50vw, (max-width: 767px) 100vw "
                   src="./images/body/pictures/ivanova-354.jpg"
                   alt="Фотография Ольги Ивановой"
                 />
@@ -404,18 +404,8 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-
                 <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/shevchenko-450.webp 450w,
-                    ./images/body/pictures/shevchenko-900.webp 900w
-                  "
-                  type="image/webp"
-                />
-
-                <source
-                  media="(min-width: 481px)"
+                  media="(min-width: 768px)"
                   srcset="
                     ./images/body/pictures/shevchenko-354.webp 354w,
                     ./images/body/pictures/shevchenko-708.webp 708w
@@ -424,8 +414,17 @@
                   type="image/webp"
                 />
 
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/body/pictures/shevchenko-450.webp 450w,
+                    ./images/body/pictures/shevchenko-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+
                 <img
-                  width="354"
+                  max-width="100%"
                   srcset="
                     ./images/body/pictures/shevchenko-354.jpg 354w,
                     ./images/body/pictures/shevchenko-708.jpg 708w,
@@ -434,7 +433,7 @@
                     ./images/body/pictures/shevchenko-270.jpg 270w,
                     ./images/body/pictures/shevchenko-540.jpg 540w
                   "
-                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 768px) 50vw, (max-width: 767px) 100vw "
                   src="./images/body/pictures/shevchenko-354.jpg"
                   alt="Фотография Андрея Шевченко"
                 />
@@ -500,18 +499,8 @@
                   sizes="25vw"
                   type="image/webp"
                 />
-
                 <source
-                  media="(max-width: 480px)"
-                  srcset="
-                    ./images/body/pictures/nikolaev-450.webp 450w,
-                    ./images/body/pictures/nikolaev-900.webp 900w
-                  "
-                  type="image/webp"
-                />
-
-                <source
-                  media="(min-width: 481px)"
+                  media="(min-width: 768px)"
                   srcset="
                     ./images/body/pictures/nikolaev-354.webp 354w,
                     ./images/body/pictures/nikolaev-708.webp 708w
@@ -520,8 +509,17 @@
                   type="image/webp"
                 />
 
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/body/pictures/nikolaev-450.webp 450w,
+                    ./images/body/pictures/nikolaev-900.webp 900w
+                  "
+                  type="image/webp"
+                />
+
                 <img
-                  max-width="354"
+                  max-width="100%"
                   srcset="
                     ./images/body/pictures/nikolaev-354.jpg 354w,
                     ./images/body/pictures/nikolaev-708.jpg 708w,
@@ -530,7 +528,7 @@
                     ./images/body/pictures/nikolaev-270.jpg 270w,
                     ./images/body/pictures/nikolaev-540.jpg 540w
                   "
-                  sizes="(min-width: 1600px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw "
+                  sizes="(min-width: 1600px) 25vw, (min-width: 768px) 50vw, (max-width: 767px) 100vw "
                   src="./images/body/pictures/nikolaev-354.jpg"
                   alt="Фотография Ивана Николаева"
                 />
