--- a/index.html
+++ b/index.html
@@ -230,11 +230,12 @@
                     ./images/body/pictures/kucherenko-450.webp 450w,
                     ./images/body/pictures/kucherenko-900.webp 900w
                   "
+                  sizes="100vw"
                   type="image/webp"
                 />
 
                 <img
-                  max-width="100%"
+                  width="100"
                   srcset="
                     ./images/body/pictures/kucherenko-354.jpg 354w,
                     ./images/body/pictures/kucherenko-708.jpg 708w,
@@ -326,11 +327,12 @@
                     ./images/body/pictures/ivanova-450.webp 450w,
                     ./images/body/pictures/ivanova-900.webp 900w
                   "
+                  sizes="100vw"
                   type="image/webp"
                 />
 
                 <img
-                  max-width="100%"
+                  width="100"
                   srcset="
                     ./images/body/pictures/ivanova-354.jpg 354w,
                     ./images/body/pictures/ivanova-708.jpg 708w,
@@ -420,11 +422,12 @@
                     ./images/body/pictures/shevchenko-450.webp 450w,
                     ./images/body/pictures/shevchenko-900.webp 900w
                   "
+                  sizes="100vw"
                   type="image/webp"
                 />
 
                 <img
-                  max-width="100%"
+                  width="100"
                   srcset="
                     ./images/body/pictures/shevchenko-354.jpg 354w,
                     ./images/body/pictures/shevchenko-708.jpg 708w,
@@ -515,11 +518,12 @@
                     ./images/body/pictures/nikolaev-450.webp 450w,
                     ./images/body/pictures/nikolaev-900.webp 900w
                   "
+                  sizes="100vw"
                   type="image/webp"
                 />
 
                 <img
-                  max-width="100%"
+                  width="100"
                   srcset="
                     ./images/body/pictures/nikolaev-354.jpg 354w,
                     ./images/body/pictures/nikolaev-708.jpg 708w,
